--- a/_config.yml
+++ b/_config.yml
@@ -16,15 +16,15 @@
 title: Hoang's Orbit
 email: nguy1708@umn.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  A place where you can find random thoughts and blogs within Hoang's orbit
+  A place where thoughts and things orbit Hoang's mind
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "nguy1708.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:  nguy1708
 
 # Build settings
 markdown: kramdown
-theme: jekyll-swiss
+theme: minima
 plugins:
   - jekyll-feed
 
