--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ github_username:  nguy1708
 # Build settings
 markdown: kramdown
 theme: minima
+remote_theme: broccolini/swiss
 plugins:
   - jekyll-feed
 
